--- a/browserstack.yml
+++ b/browserstack.yml
@@ -1,5 +1,5 @@
-userName: srikanthathikari_ZYPU0S
-accessKey: 8anEBpazr8fZQkN7tFxw
+userName: *****
+accessKey: ******
 platforms:
   - os: Windows
     osVersion: 11
